spacing fixed

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -44,6 +44,7 @@ header {
     justify-content: center;
 }
 
+
 header p {
     position: absolute;
     top: 300px;
@@ -95,7 +96,36 @@ header p {
     }
 }
 
-.nav-link {
+.about_header p {
+    top: 250px;
+    text-align: center;
+    font-size: 40px;
+    color: rgb(92, 92, 92);
+    padding: 0 400px;
+
+    @media (max-width: 1350px) {
+        font-size: 35px;
+        padding: 0 280px;
+    }
+
+    @media (max-width: 1050px) {
+        font-size: 30px;
+        padding: 0 200px;
+    }
+
+    @media (max-width: 900px) {
+        font-size: 30px;
+        padding: 0 100px;
+    }
+
+    @media (max-width: 500px) {
+        font-size: 22px;
+        padding: 15px;
+    }
+
+}
+
+.nav-link ms-lg-3 {
     font-family: "CommutersSans-SemiBold" !important;
 }
 
@@ -141,10 +171,18 @@ footer h5, #contactForm h3 {
 
 .about_header {
     background: url(../images/about_bg.png);
-    background-size: cover;
+    background-size: contain;
     background-position: center bottom;
+    background-repeat: no-repeat;
     height: 100vh;
-    margin: 0 75px;
+
+    @media (max-width: 800px) {
+        height: 76vh;
+    }
+
+    @media (min-width: 1600px) {
+        background-size: cover;
+    }
 }
 
 .bi {
